avidec: consider non video to contain only keyframes when seeking.

Fixes Ticket271

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>